# Theridian

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dockerfile.slim.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml  run.py  workspace.yml
apps/api/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py
apps/api/tests/: test_substations.py
apps/etl/: dagster_assets.py  dagster_jobs.py
core/: celery.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py
monitoring/: prometheus.yml
scripts/: setup.sh
